# root-s3

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  main.yaml
src/: lib.rs
