[package]
name = "s3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "s3-cli"
path = "bin/cli.rs"

[lib]
name = "root_s3"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.34.0"
tokio = { version = "1.29.1", features = ["full"] }
aws-types = "0.56.1"
aws-credential-types = "0.56.1"
aws-smithy-client = { version = "0.56.1", features = ["client-hyper", "rustls"] }
http = "0.2"
hyper = "0.14.27"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
bytes = "1.5.0"
tokio-stream = { version = "0.1.14", features = ["full"] }
thiserror = "1.0.50"
