[package]
name = "s3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "s3-cli"
path = "bin/cli.rs"

[lib]
name = "root_s3"
path = "src/lib.rs"

[lints.clippy]
pedantic = "warn"
missing_errors_doc = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = { version = "1.22", features = ["behavior-version-latest"] }
tokio = { version = "1.37", features = ["full"] }
aws-types = "1.1"
aws-credential-types = "1.1"
aws-smithy-runtime-api = "1.3"
http = "1"
hyper = "1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
bytes = "1.6"
tokio-stream = { version = "0.1", features = ["full"] }
thiserror = "1.0"
